# quizbot

./: README.md
backend/: ask_all.py  ask_free.py  ask_one.py  generate_requirements.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
backend/chroma_db/: chroma.sqlite3
backend/chroma_db_cours/: chroma.sqlite3
backend/chroma_db_patisseries/: chroma.sqlite3
backend/documents/: answers_index.csv  eval.csv  eval_fake.csv  eval_fake_elements.csv  qcm_resultats.csv  quiz_patisseries.csv  resultats_embedding.csv
backend/qcm/: evaluate_qcm.py  export_finetune.py  process_eval.py
backend/rag/: answer_from_docs.py  index_courses.py
frontend/: api.js  index.html  package-lock.json
frontend/src/: App.css  App.jsx  ChatTab.jsx  QuizTab.jsx  api.js  index.css
frontend/src/components/: ChatTab.jsx  QcmResultModal.jsx  QcmSelector.jsx  RagChat.jsx
