[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marilyn Olejniczak <92530551+ZyanneM@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "qcm" }, { include = "rag" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.3.2"
sentence-transformers = "^4.1.0"
langchain = "^0.1.17"
langchain-community = "^0.0.36"
chromadb = "^1.0.11"
pypdf = "^5.6.0"
ollama = "^0.1.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
